--- a/style.css
+++ b/style.css
@@ -1,11 +1,51 @@
-.grid-container {
+/* .grid-container {
     display: grid;
     grid-template-columns: 20vw 20vw 20vw 20vw;
     grid-gap: 1vw;
     padding-left: 8vw;
-}
+}  */
+
 .parallax-container {
-    height: 200px;
+    height: 300px;
+} 
+
+#header {
+    text-align: center;
+    border: 4px;
+    border-style: outset;
+}
+
+#aboutMe {
+    width: 50vw;
+    margin-right: 25vw;
+    margin-left: 25vw;
+}
+
+#lang {
+    height: 150px;
+    width: 100px;
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
+    border: 4px;
+    background-color: white;
+}
+
+#lang:hover {
+    border-style: outset;
+    animation: bounce 1s;
+}
+
+#languages {
+    border: 4px;
+    border-style: outset;
+    text-align: center;
+    /* grid-area: 1 / 1 / span 1 / span 4 */
+}
+
+#portfolio {
+    border: 4px;
+    border-style: outset;
+    text-align: center;
 }
 
 #card-title {
@@ -21,33 +61,50 @@
 }
 
 #card1 {
-    grid-area: 1 / 1 / span 1 / span 1;  
+    /* grid-area: 1 / 1 / span 1 / span 1;   */
 }
 
 #card2 {
-    grid-area: 1 / 2 / span 1 / span 1;
+    /* grid-area: 1 / 2 / span 1 / span 1; */
 }
 
 #card3 {
-    grid-area: 1 / 3 / span 1 / span 1;
+    /* grid-area: 1 / 3 / span 1 / span 1; */
 }
 
 #card4 {
-    grid-area: 1 / 4 / span 1 / span 1;
+    /* grid-area: 1 / 4 / span 1 / span 1; */
 }
 
 #card5 {
-    grid-area: 2 / 1 / span 1 / span 1;
+    /* grid-area: 2 / 1 / span 1 / span 1; */
 }
 
 #card6 {
-    grid-area: 2 / 2 / span 1 / span 1;
+    /* grid-area: 2 / 2 / span 1 / span 1; */
 }
 
 #card7 {
-    grid-area: 2 / 3 / span 1 / span 1;
+    /* grid-area: 2 / 3 / span 1 / span 1; */
 }
 
 #card8 {
-    grid-area: 2 / 4 / span 1 / span 1;
+    /* grid-area: 2 / 4 / span 1 / span 1; */
+}
+
+@keyframes bounce {
+	0%, 20%, 60%, 100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+
+	40% {
+		-webkit-transform: translateY(-20px);
+		transform: translateY(-20px);
+	}
+
+	80% {
+		-webkit-transform: translateY(-10px);
+		transform: translateY(-10px);
+	}
 }
