--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-/* .grid-container {
+.grid-container {
     display: grid;
     grid-template-columns: 20vw 20vw 20vw 20vw;
     grid-gap: 1vw;
     padding-left: 8vw;
-}  */
+    /* background-image: url(./assets/abstract-ai-art-373543.jpg); */
+} 
 
 .parallax-container {
     height: 300px;
@@ -13,12 +14,15 @@
     text-align: center;
     border: 4px;
     border-style: outset;
+    border-color: #9e9e9e;
+    background-color: #424242;
 }
 
 #aboutMe {
     width: 50vw;
     margin-right: 25vw;
     margin-left: 25vw;
+    background-color: white;
 }
 
 #lang {
@@ -38,58 +42,73 @@
 #languages {
     border: 4px;
     border-style: outset;
-    text-align: center;
-    /* grid-area: 1 / 1 / span 1 / span 4 */
-}
-
-#portfolio {
-    border: 4px;
-    border-style: outset;
+    border-color: #9e9e9e;
+    background-color: #424242;
     text-align: center;
 }
 
 #card-title {
     font-weight: bolder;
     text-align: center;
-    background-color: black;
+    background-color: #424242;
     opacity: .50;
     width: 100%;
 }
 
 #card-title:hover {
     opacity: 1;
+    border: 4px;
+    border-style: inherit;
+    border-color: silver;
+}
+
+#portfolio {
+    border: 4px;
+    border-style: outset;
+    border-color: #9e9e9e;
+    background-color: #424242;
+    text-align: center;
+    /* background-color: white; */
+}
+
+#cardImage {
+    height: 250px;
 }
 
 #card1 {
-    /* grid-area: 1 / 1 / span 1 / span 1;   */
+    grid-area: 1 / 1 / span 1 / span 1;  
 }
 
 #card2 {
-    /* grid-area: 1 / 2 / span 1 / span 1; */
+    grid-area: 1 / 2 / span 1 / span 1;
 }
 
 #card3 {
-    /* grid-area: 1 / 3 / span 1 / span 1; */
+    grid-area: 1 / 3 / span 1 / span 1;
 }
 
 #card4 {
-    /* grid-area: 1 / 4 / span 1 / span 1; */
+    grid-area: 1 / 4 / span 1 / span 1;
 }
 
 #card5 {
-    /* grid-area: 2 / 1 / span 1 / span 1; */
+    grid-area: 2 / 1 / span 1 / span 1;
 }
 
 #card6 {
-    /* grid-area: 2 / 2 / span 1 / span 1; */
+    grid-area: 2 / 2 / span 1 / span 1;
 }
 
 #card7 {
-    /* grid-area: 2 / 3 / span 1 / span 1; */
+    grid-area: 2 / 3 / span 1 / span 1;
 }
 
 #card8 {
-    /* grid-area: 2 / 4 / span 1 / span 1; */
+    grid-area: 2 / 4 / span 1 / span 1;
+}
+
+#footer {
+    text-align: center;
 }
 
 @keyframes bounce {
