--- a/style.css
+++ b/style.css
@@ -1,23 +1,46 @@
-.grid-container {
+#grid-container {
     display: grid;
     grid-template-columns: 20vw 20vw 20vw 20vw;
     grid-gap: 3vw;
     padding-left: 4vw;
-    border-style: outset;
-    border-color: #9e9e9e;
-    background-color: #424242;
 } 
 
 .parallax-container {
-    height: 300px;
-} 
+    height: 500px;
+}
+
+#break {
+    height: 100px;
+    border: 4px;
+    border-style: outset;
+    border-color: #005C69;
+    background-color: #9CA3DB;
+}
+
+#navbar {
+    background-color: #0D2E37;
+}
+
+.nav-color {
+    color: #9CA3DB;
+    font-size: 20px;
+}
 
 #header {
     text-align: center;
     border: 4px;
     border-style: outset;
-    border-color: #9e9e9e;
-    background-color: #424242;
+    border-color: #454B66;
+    background-color: #0D2E37;
+    color: #9CA3DB;
+}
+
+#picture {
+    border: 4px;
+    border-radius: 50%;
+    border-style: outset;
+    border-color: #454B66;
+    margin-top: 8px;
 }
 
 #aboutMe {
@@ -29,23 +52,20 @@
 
 #lang {
     height: 150px;
-    width: 100px;
-    margin-left: 2.5vw;
-    margin-right: 2.5vw;
-    border: 4px;
-    background-color: white;
+    width: 135px;
+    margin-left: 2vw;   
 }
 
 #lang:hover {
-    border-style: outset;
     animation: bounce 1s;
 }
 
 #languages {
     border: 4px;
     border-style: outset;
-    border-color: #9e9e9e;
-    background-color: #424242;
+    border-color: #454B66;
+    background-color: 9CA3DB;
+    color: #0D2E37;
     text-align: center;
 }
 
@@ -94,51 +114,51 @@
 }
 
 #card5 {
-    grid-area: 2 / 1 / span 1 / span 1;
+    grid-area: 1 / 1 / span 1 / span 1;
 }
 
 #card6 {
-    grid-area: 2 / 2 / span 1 / span 1;
+    grid-area: 1 / 2 / span 1 / span 1;
 }
 
 #card7 {
-    grid-area: 2 / 3 / span 1 / span 1;
+    grid-area: 1 / 3 / span 1 / span 1;
 }
 
 #card8 {
-    grid-area: 2 / 4 / span 1 / span 1;
+    grid-area: 1 / 4 / span 1 / span 1;
 }
 
 #card9 {
-    grid-area: 3 / 1 / span 1 / span 1;
+    grid-area: 1 / 1 / span 1 / span 1;
 }
 
 #card10 {
-    grid-area: 3 / 2 / span 1 / span 1;
+    grid-area: 1 / 2 / span 1 / span 1;
 }
 
 #card11 {
-    grid-area: 3 / 3 / span 1 / span 1;
+    grid-area: 1 / 3 / span 1 / span 1;
 }
 
 #card12 {
-    grid-area: 3 / 4 / span 1 / span 1;
+    grid-area: 1 / 4 / span 1 / span 1;
 }
 
 #card13 {
-    grid-area: 4 / 1 / span 1 / span 1;
+    grid-area: 1 / 1 / span 1 / span 1;
 }
 
 #card14 {
-    grid-area: 4 / 2 / span 1 / span 1;
+    grid-area: 1 / 2 / span 1 / span 1;
 }
 
 #card15 {
-    grid-area: 4 / 3 / span 1 / span 1;
+    grid-area: 1 / 3 / span 1 / span 1;
 }
 
 #card16 {
-    grid-area: 4 / 4 / span 1 / span 1;
+    grid-area: 1 / 4 / span 1 / span 1;
 }
 
 #webpages {
@@ -150,7 +170,6 @@
 
 #email {
     font-size: 28px;
-    margin-left: 34vw;
 }
 
 
