--- a/style.css
+++ b/style.css
@@ -8,14 +8,30 @@
 
 .parallax-container {
     height: 500px;
+    mix-blend-mode: darken;
 }
 
-#break {
-    height: 100px;
-    border: 4px;
-    border-style: outset;
-    border-color: #005C69;
-    background-color: #9CA3DB;
+#quote {
+    margin-left: 35vw;
+    margin-right: 35vw;
+    margin-top: 20vh;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+    /* background-color: #0D2E37; */
+    color: #0D2E37;
+}
+
+#words {
+    text-align: center;
+    font-size: 20px;
+}
+
+#author {
+    text-align: right;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 #navbar {
@@ -247,29 +263,14 @@
 }
 
 
-#email:hover {
-    transform-origin: center bottom;
-	transform: rotateX(-90deg) translateY(100%);
-    color: white;
-    
-}
-
 #linkedin {
     font-size: 28px;
     margin-left: 2vw;
 }
 
-#linkedin:hover {
-    color: white;
-}
-
 #github {
     font-size: 28px;
     margin-left: 2vw;
-}
-
-#github:hover {
-    color: white;
 }
 
 #footer {
@@ -291,4 +292,47 @@
 		-webkit-transform: translateY(-10px);
 		transform: translateY(-10px);
 	}
+}
+
+@-webkit-keyframes pulse {
+  25% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+  75% {
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+}
+
+@keyframes pulse {
+  25% {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+  75% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+}
+
+.pulse {
+  display: inline-block;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+
+.pulse:hover {
+  -webkit-animation-name: pulse;
+  animation-name: pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
