--- a/style.css
+++ b/style.css
@@ -260,17 +260,20 @@
 
 #email {
     font-size: 28px;
+    color: #9CA3DB;
 }
 
 
 #linkedin {
     font-size: 28px;
     margin-left: 2vw;
+    color: #9CA3DB;
 }
 
 #github {
     font-size: 28px;
     margin-left: 2vw;
+    color: #9CA3DB;
 }
 
 #footer {
