--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@
     padding-bottom: 20px;
     padding-right: 20px;
     padding-left: 20px;
-    /* background-color: #0D2E37; */
     color: #0D2E37;
 }
 
@@ -48,8 +47,9 @@
     border: 4px;
     border-style: outset;
     border-color: #454B66;
-    background-color: #0D2E37;
+    background-color: #454B66;
     color: #9CA3DB;
+    text-shadow: 2px 2px #0D2E37;
 }
 
 #picture {
@@ -70,7 +70,8 @@
 #lang {
     height: 150px;
     width: 135px;
-    margin-left: 2vw;   
+    margin-left: 2vw; 
+    margin-top: 60vh;  
 }
 
 #lang:hover {
@@ -84,11 +85,18 @@
     background-color: #677DB7;
     color: #0D2E37;
     text-align: center;
+    text-shadow: 2px 2px #9CA3DB;
+    background-image: url("./assets/fullstack.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 800px;
 }
 
 #card-title {
     font-weight: bolder;
     text-align: center;
+    text-shadow: 2px 2px #0D2E37;
     background-color: #454B66;
     color: #9CA3DB;
     opacity: .50;
@@ -105,6 +113,7 @@
 #card-content {
     background-color: #005C69;
     color: #9CA3DB;
+    text-shadow: 2px 2px #424242;
 }
 
 #card-action {
