fixing language icons for varying screen size.

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
     height: 150px;
     width: 135px;
     margin-left: 2vw; 
-    margin-top: 60vh;  
+    margin-top: 420px;  
 }
 
 #lang:hover {
