--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@
 }
 
 @media screen and (max-width: 600px) {
+    #nav-links {font-size: 18px;}
     #quote {margin-top: 15vh; margin-left: 10vw; margin-right: 10vw;}
     #picture {height: 200px; width: 200px;}
     #lang { margin-top: 0vh; margin-bottom: 0;}
