--- a/style.css
+++ b/style.css
@@ -1,391 +1,333 @@
-#grid-container {
-    display: grid;
-    grid-template-columns: 20vw 20vw 20vw 20vw;
-    grid-gap: 3vw;
-    padding-left: 4vw;
-    background-color: #0D2E37;
-} 
-
-.parallax-container {
-    height: 500px;
-    mix-blend-mode: darken;
+body {
+  font-family: 'Courier New', Courier, monospace;
+  margin: 0;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  display: -ms-grid;
+  display: grid;
 }
 
-#quote {
-    margin-left: 35vw;
-    margin-right: 35vw;
-    margin-top: 20vh;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
-    color: #0D2E37;
+section {
+  height: calc(100vh);
+  width: calc(100vw);
+  color: white;
+  scroll-snap-align: start;
 }
 
-#words {
-    text-align: center;
-    font-size: 20px;
+section:nth-of-type(1) {
+  background: url("./assets/road.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* -webkit-animation: Section 4s forwards 0s linear;
+          animation: Section 4s forwards 0s linear; */
+  text-align: center;
 }
 
-#author {
-    text-align: right;
-    font-size: 20px;
-    font-weight: bold;
+section:nth-of-type(2) {
+  /* -webkit-animation: Section 3s forwards 0s linear;
+          animation: Section 3s forwards 0s linear; */
+  background: url("./assets/fullstack.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-#navbar {
-    background-color: #0D2E37;
+section:nth-of-type(3) {
+  /* -webkit-animation: Section 1s forwards 0s linear;
+          animation: Section 1s forwards 0s linear; */
+  background: url("./assets/rainy.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.nav-color {
-    color: #9CA3DB;
-    font-size: 20px;
+section h1 {
+  font-size: 3em;
+  text-align: center;
+  text-shadow: 2px 2px 2px black;
 }
 
-#header {
-    text-align: center;
-    /* border: 4px; */
-    /* border-style: outset; */
-    /* border-color: #454B66; */
-    background-color: rgb(41, 45, 63);
-    color: #9CA3DB;
-    text-shadow: 2px 2px #0D2E37;
+section p {
+  font-size: 1.5em;
+  text-align: center;
+  text-shadow: 2px 2px 2px black;
 }
 
-#picture {
-    border: 4px;
-    border-radius: 50%;
-    border-style: outset;
-    height: 350px;
+section .me {
+  height: 25em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5vh;
+  border-radius: 50%;
 }
 
-#aboutMe {
-    width: 50vw;
-    margin-right: 25vw;
-    margin-left: 25vw;
-    background-color: white;
+.title {
+  color: black;
+  font-weight: bold;
+  font-size: 21px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-shadow: 2px 2px 2px silver;
 }
 
-#title {
-    font-size: 30px;
+.card-collection {
+  display: grid;
+  grid-row-gap: 10vw;
 }
 
-#lang {
-    height: 150px;
-    width: 135px;
-    margin-left: 2vw; 
-    margin-top: 420px;
-    margin-bottom: 40px;  
+.card {
+  position: relative;
+  height: 400px;
+  width: 300px;
+  /* border-style: inset;
+  border-width: 2px;
+  border-color: whitesmoke;
+  border-radius: 20px; */
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
 }
 
-#lang:hover {
-    animation: bounce 1s;
+.card:hover {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
-#languages {
-    border: 4px;
-    border-style: outset;
-    border-color: #454B66;
-    background-color: #677DB7;
-    color: #0D2E37;
-    text-align: center;
-    text-shadow: 2px 2px #9CA3DB;
-    background-image: url("./assets/fullstack.jpeg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 800px;
+.front, .back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 400px;
+  width: 300px;
+  border-style: inset;
+  border-width: 2px;
+  border-color: whitesmoke;
+  border-radius: 20px;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
-#card-title {
-    font-weight: bolder;
-    text-align: center;
-    text-shadow: 2px 2px #0D2E37;
-    background-color: #454B66;
-    color: #9CA3DB;
-    opacity: .50;
-    width: 100%;
+.back {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  background-image: linear-gradient(white, black);
+  border-radius: 20px;
+  border-style: inset;
+  border-width: 2px;
+  border-color: whitesmoke;
+  border-radius: 20px;
+  padding: 10px;
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
 }
 
-#card-title:hover {
-    opacity: 1;
-    border: 4px;
-    border-style: inherit;
-    border-color: silver;
+#description {
+  font-size: 16px;
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-shadow: 0px 0px 0px black;
 }
 
-#card-content {
-    background-color: #005C69;
-    color: #9CA3DB;
-    text-shadow: 2px 2px #424242;
+h2 {
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
 }
 
-#card-action {
-    background-color: #677DB7;
+.card-image {
+  box-align: center;
+  height: 300px;
+  width: 300px;
 }
 
-#card-link {
-    color: #005C69;
+.tech {
+  height: 45px;
+  width: 300px;
+  font-size: 36px;
+  text-align: center;
+  padding-top: 5px;
 }
 
-#card-link:hover {
-    font-weight: bolder;
-}
-
-#cardImage {
-    height: 250px;
+.small {
+  height: 15px;
+  width: 15px;
 }
 
 #card1 {
-    grid-area: 1 / 1 / span 1 / span 1; 
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
+  grid-area: 2 / 4 / span 1 / span 1;
 }
 
 #card2 {
-    grid-area: 1 / 2 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
+  grid-area: 2 / 3 / span 1 / span 1;
 }
 
 #card3 {
-    grid-area: 1 / 3 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
+  grid-area: 2 / 2 / span 1 / span 1;
 }
 
-#card4 {
-    grid-area: 1 / 4 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
+#lang {
+  height: 150px;
+  width: 135px;
 }
 
-#card5 {
-    grid-area: 2 / 1 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
+#lang:hover {
+  -webkit-animation: jello-horizontal 0.9s both;
+  animation: jello-horizontal 0.9s both;
 }
 
-#card6 {
-    grid-area: 2 / 2 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
+.allLanguages {
+  width: 1200px;
+  margin-top: 48vh;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-animation: Languages 1.5s forwards 0s linear;
+          animation: Languages 1.5s forwards 0s linear;
 }
 
-#card7 {
-    grid-area: 2 / 3 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
+a:link {
+  text-decoration: none;
 }
-
-#card8 {
-    grid-area: 2 / 4 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#card9 {
-    grid-area: 3 / 1 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#card10 {
-    grid-area: 3 / 2 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#card11 {
-    grid-area: 3 / 3 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#card12 {
-    grid-area: 3 / 4 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#card13 {
-    grid-area: 4 / 1 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#card14 {
-    grid-area: 4 / 2 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#card15 {
-    grid-area: 4 / 3 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#card16 {
-    grid-area: 4 / 4 / span 1 / span 1;
-    background-color: #9CA3DB;
-    border: 4px;
-    border-style: outset;
-    border-color: #677DB7;
-}
-
-#webpages {
-    border-style: outset;
-    border-color: #9e9e9e;
-    background-color: #424242;
-}
-
 
 #email {
-    font-size: 28px;
-    color: #9CA3DB;
+  font-size: 2em;
+  text-shadow: 2px 2px 2px black;
+  font-weight: bold;
+  color: white;
 }
 
-
 #linkedin {
-    font-size: 28px;
-    margin-left: 2vw;
-    color: #9CA3DB;
+  font-size: 2em;
+  margin-left: 2vw;
+  text-shadow: 2px 2px 2px black;
+  font-weight: bold;
+  color: white;
 }
 
 #github {
-    font-size: 28px;
-    margin-left: 2vw;
-    color: #9CA3DB;
+  font-size: 2em;
+  margin-left: 2vw;
+  text-shadow: 2px 2px 2px black;
+  font-weight: bold;
+  color: white;
 }
 
-#about-me {
-    background-color: rgb(41, 45, 63);
+@-webkit-keyframes Section {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+    height: 1px;
+  }
+  100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+    height: 100vh;
+  }
 }
 
-#section {
-    background-color: #0D2E37;
-    color: #9CA3DB;
+@keyframes Section {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+    height: 1px;
+  }
+  100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+    height: 100vh;
+  }
 }
 
-#aboutMe {
-    background-color: #9CA3DB;
-    color: #0D2E37;
+@-webkit-keyframes Languages {
+  0% {
+    -webkit-transform: rotate(0) scale(0.5) translateY(-1500px);
+            transform: rotate(0) scale(0.5) translateY(-1500px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotate(0) translateY(0);
+            transform: rotate(0) translateY(0);
+    opacity: 1;
+  }
 }
 
-#footer {
-    text-align: center;
+@keyframes Languages {
+  0% {
+    -webkit-transform: rotate(0) scale(0.5) translateY(-1500px);
+            transform: rotate(0) scale(0.5) translateY(-1500px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotate(0) translateY(0);
+            transform: rotate(0) translateY(0);
+    opacity: 1;
+  }
 }
 
-@media screen and (max-width: 600px) {
-    #nav-links {font-size: 16px;}
-    #quote {margin-top: 15vh; margin-left: 10vw; margin-right: 10vw;}
-    #picture {height: 200px; width: 200px;}
-    #lang { margin-top: 0vh; margin-bottom: 0;}
-    #card1 {grid-area: 1 / 1 / span 1 / span 4;}
-    #card2 {grid-area: 2 / 1 / span 1 / span 4;}
-    #card3 {grid-area: 3 / 1 / span 1 / span 4;}
-    #card4 {grid-area: 4 / 1 / span 1 / span 4;}
-    #card5 {grid-area: 5 / 1 / span 1 / span 4;}
-    #card6 {grid-area: 6 / 1 / span 1 / span 4;}
-    #card7 {grid-area: 7 / 1 / span 1 / span 4;}
-    #card8 {grid-area: 8 / 1 / span 1 / span 4;}
-    #card9 {grid-area: 9 / 1 / span 1 / span 4;}
-    #card10 {grid-area: 10 / 1 / span 1 / span 4;}
-    #card11 {grid-area: 11 / 1 / span 1 / span 4;}
-    #card12 {grid-area: 12 / 1 / span 1 / span 4;}
-    #card13 {grid-area: 13 / 1 / span 1 / span 4;}
-    #card14 {grid-area: 14 / 1 / span 1 / span 4;}
-    #card15 {grid-area: 15 / 1 / span 1 / span 4;}
-    #card16 {grid-area: 16 / 1 / span 1 / span 4;}
-}
-
-@keyframes bounce {
-	0%, 20%, 60%, 100% {
-		-webkit-transform: translateY(0);
-		transform: translateY(0);
-	}
-
-	40% {
-		-webkit-transform: translateY(-20px);
-		transform: translateY(-20px);
-	}
-
-	80% {
-		-webkit-transform: translateY(-10px);
-		transform: translateY(-10px);
-	}
-}
-
-@-webkit-keyframes pulse {
-  25% {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
+@-webkit-keyframes jello-horizontal {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
   }
   75% {
-    -webkit-transform: scale(0.8);
-    transform: scale(0.8);
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
 }
 
-@keyframes pulse {
-  25% {
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
+@keyframes jello-horizontal {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
   }
   75% {
-    -webkit-transform: scale(0.8);
-    -ms-transform: scale(0.8);
-    transform: scale(0.8);
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
 }
 
-.pulse {
-  display: inline-block;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-
-.pulse:hover {
-  -webkit-animation-name: pulse;
-  animation-name: pulse;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-}
+/*# sourceMappingURL=style.css.map */
